{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "playerControls",
            "id": "32f525de-626f-4219-85e5-56bf242f28c0",
            "actions": [
                {
                    "name": "xMovment",
                    "type": "Button",
                    "id": "c65a4c43-5eca-4ccf-979f-82630a38c815",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "zMovement",
                    "type": "Button",
                    "id": "ccfe10bf-44b5-4172-b7c7-7e161cb42cbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "136f6c20-9eea-4413-a0b1-d7c638243d73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "fireLeft",
                    "type": "Button",
                    "id": "4cc0edae-f368-42ea-9d9f-990838a84bf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "fireRight",
                    "type": "Button",
                    "id": "37cfb968-a034-44ec-b7c9-58a0f7ac879b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "kick",
                    "type": "Button",
                    "id": "203eca01-ac6a-49fa-943f-6561660c172a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ReloadLevel",
                    "type": "Button",
                    "id": "07428a98-4242-4518-8c08-bc6a02905da1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "loadMenu",
                    "type": "Button",
                    "id": "ad3ff34f-009c-4175-9b21-b3819dd7efae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "pickLeft",
                    "type": "Button",
                    "id": "d8f7f8e0-aca8-421a-a1af-6bf61017faf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "pickRight",
                    "type": "Button",
                    "id": "f46b15f6-e986-4532-a1ea-eee58b365e00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "a4e0a4e2-2669-4323-928a-4a1e468704d7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xMovment",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b6d98fa8-8882-4ca0-9c2e-b626a413aedc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xMovment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e0df8129-7e05-4160-a197-7c1c91bd4ae0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xMovment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "KeyBoard",
                    "id": "f62a0260-d9b9-44e5-b8b7-692ffb0c34b6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3c5336b5-e7f9-4c30-9e7a-8d0e7561e8e3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dab9e2a7-c6a1-4a6a-a30f-a40312e69c9a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d3aefa44-2902-416f-a553-bd9d4dc71958",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bc491cc-7add-484f-b349-cb94e141c033",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fireLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "815020ba-5c74-45f4-9356-f233ec18e443",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fireRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07cd8431-9d35-41af-95ce-ee21dd4f1319",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b22dcf0-28b8-4b36-adaa-91fa63fb16f3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c3ccb60-df54-4f80-be61-b4bbd12595ff",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "loadMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7509e0b2-3481-4236-ba6d-cc04c59ea251",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d80b788-aef7-46a1-94dd-bd84ff71293c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pickRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}